# swe-rl

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  license_header.txt  pyproject.toml
resources/: sweb_lite_gt_loc.jsonl  sweb_verified_gt_loc.jsonl
src/swerl/: __init__.py
src/swerl/agentless_mini/: localize.py  repair.py  rerank.py
src/swerl/agentless_mini/tools/: check_loc_perf.py  prepare_gt_files.py
src/swerl/agentless_mini/utils/: __init__.py  api.py  args.py  data.py  envs.py  misc.py  prompts.py
src/swerl/core/: __init__.py  prompts.py  reward.py
tests/: test_reward.py
