[project]
description = "SWE-RL: Advancing LLM Reasoning via Reinforcement Learning on Open Software Evolution"
license = {file = "LICENSE"}
name = "swerl"
readme = "README.md"
requires-python = ">=3.10"
version = "0.0.1"
dependencies = [
    "unidiff>=0.7.5",
]

[tool.setuptools.packages.find]
include = ["swerl*"]
where = ["src"]

[project.optional-dependencies]
agentless = [
    "openai>=1.59.6",
    # NOTE: newer version of datasets introduces uncompatible changes for datasets.shard
    # Freeze it for safety
    "datasets==3.0.1",
    "transformers>=4.45.2",
    "tiktoken>=0.7.0",
    "tenacity>=9.0.0",
]
dev = ["pytest", "pre-commit"]

[tool.mypy]
check_untyped_defs = true
follow_imports = "silent"
ignore_missing_imports = true
mypy_path = "src"
packages = ["swerl"]
python_version = "3.10"

[tool.black]
include = '\.pyi?$'
line-length = 88
target-version = ["py310"]

[tool.isort]
line_length = 88
profile = "black"
skip_gitignore = true
